--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,21 @@ html, body {
 /* =======ABOUT=================== */
 /* =======ABOUT=================== */
 
-.about {}
+.about {
+  padding: 180px 0 160px;
+  position: relative;
+}
+
+.about::before {
+  content: "";
+  position: absolute;
+  left: 1681px;
+  top: 151px;
+  background: url("../images/decor/1.svg") no-repeat;
+  width: 100px;
+  height: 85px;
+  display: block;
+}
 
 .about__inner {}
 
@@ -273,10 +287,13 @@ html, body {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  /* margin: 180px 0; */
+  margin-bottom: 180px;
 }
 
 .about__createx-content {
   max-width: 600px;
+  margin-right: 30px;
 }
 
 .about__heading {
@@ -301,6 +318,7 @@ html, body {
   font-size: 20px;
   font-weight: 700;
   line-height: 150%;
+  color: #1E212C;
 }
 
 .about__btn-box {
@@ -321,4 +339,74 @@ html, body {
 
 .about__img {}
 
-.about__values {}
+
+/* =======ABOUT__VALUES=============== */
+/* =======ABOUT__VALUES=============== */
+
+/* .about__values {
+}
+
+
+.about__image-box {}
+
+.about__numbers {
+  display: flex;
+  align-items: center;
+}
+
+.about__number span {
+
+}
+
+.about__number {} */
+
+
+
+
+
+
+.about__values {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about__image-box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about__image-box {
+  
+}
+
+.about__numbers {
+  margin-left: 30px;
+  align-self: center;
+  /* margin: 96px 0 30px 135px; */
+  /* color: rgb(30, 33, 44); */
+  /* font-size: 18px; */
+  /* font-weight: 700; */
+  /* line-height: 150%; */
+  /* letter-spacing: 0%; */
+  /* min-width: 300px; */
+}
+
+.about__number {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.about__number:last-child {
+  margin-bottom: 0;
+}
+
+.about__number span {
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 130%;
+  letter-spacing: 1px;
+  color: #FF3F3A;
+  margin-right: 16px;
+}
