--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html, body {
 }
 
 .main__team {
-
+  padding: 160px 0 180px;
 }
 
 .button {
@@ -638,23 +638,12 @@ html, body {
 /* ==================== TEAM ====================================== */
 
 .team {
-
+  background: url("../images/decor/team-bg.svg") no-repeat, #F4F5F7;
 }
-
-/* .team__inner {
-  box-sizing: border-box;
-} */
-
 
 .team__heading {
   margin-bottom: 60px;
   position: relative;
-}
-
-.team__slider {
-  /* position: relative;
-  box-sizing: border-box;
-  display: block; */
 }
 
 .team__slider .slick-list {
@@ -665,20 +654,22 @@ html, body {
   padding: 0 15px;
 }
 
-/* .team__slide:hover {
-  box-shadow: inset 0 0 0 ;
-} */
+.team__slide:hover .team__socials {
+  transform: translateY(0%)
+}
 
 .team__image-box {
   border-radius: 4px;
   margin-bottom: 16px;
   overflow: hidden;
   position: relative;
+  
 }
 
 .team__image {
   position: relative;
   height: 340px;
+  
 }
 
 .team__image img {
@@ -692,12 +683,42 @@ html, body {
 }
 
 .team__socials {
-
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  border-radius: 4px;
+  background: linear-gradient(180.00deg, rgba(30, 33, 44, 0) 43.897%,rgba(30, 33, 44, 0.03) 55.206%,rgba(30, 33, 44, 0.33) 68.728%,rgba(30, 33, 44, 0.56) 76.168%,rgba(30, 33, 44, 0.77) 83.749%,rgba(30, 33, 44, 0.92) 91.493%,rgb(30, 33, 44) 100%);
+  transform: translateY(50%);
+  transition: all .3s;
 }
 
-.team__socials-item {}
+.team__socials-item {
+  margin-right: 12px;
+}
 
-.team__socials-link {}
+.team__socials-item:last-child {
+  margin-right: 0;
+}
+
+
+.team__socials-link {
+  display: block;
+  line-height: 0;
+}
+
+.team__socials-link path {
+  transition: all .3s;
+}
+
+.team__socials-link:hover path {
+  fill: #fff;
+}
 
 .team__info {
   text-align: center;
@@ -713,4 +734,53 @@ html, body {
 .team__info-position {
   color: #787A80;
   font-weight: 400;
+}
+
+.team__slider-arrows {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.team__slider-arrows{
+  display: flex;
+}
+
+.team__slider-arrow{
+  display: block;
+  line-height: 0;
+  border-radius: 50%;
+  position: relative;
+  z-index: 5;
+}
+
+.team__slider-arrow path {
+  transition: all .3s;
+}
+
+.team__slider-arrow::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 48px;
+  height: 48px;
+  background-color: #FF3F3A;
+  border-radius: 50%;
+  z-index: -1;
+  transition: all .3s;
+}
+
+.team__slider-arrow:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+
+.team__slider-arrow:hover path{
+  fill: #fff;
+}
+
+.team__slider-prev {
+  margin-right: 24px;
 }
