--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ html, body {
   padding: 160px 0 180px;
 }
 
+.main__testimonials {
+  padding-bottom: 195px;
+}
+
 .button {
   display: inline-block;
   font-weight: 700;
@@ -560,7 +564,7 @@ html, body {
 
 .directions__link-btn::after {
   content: "";
-  background: url("../images/icons/arrow-right.svg") 0 0 / 100% no-repeat;
+  background: url("../images/icons/arrow-right-red.svg") 0 0 / 100% no-repeat;
   width: 24px;
   height: 24px;
   display: block;
@@ -782,3 +786,161 @@ html, body {
 .team__slider-prev {
   margin-right: 24px;
 }
+
+/* =============TESTIMONIALS==================== */
+/* =============TESTIMONIALS==================== */
+
+
+
+.testimonials {
+  background-color: #F4F5F7
+}
+
+.testimonials__inner {
+  position: relative;
+  z-index: 1;
+}
+
+.testimonials__heading {
+  margin-bottom: 60px;
+}
+
+.testimonials__slider-wrapper {
+  padding: 0 50px;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.testimonials__slider {
+  max-width: 1020px;
+  margin: 0 auto;
+}
+
+.testimonials__slide {
+  padding: 64px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.testimonials__slide-inner {
+  max-width: 810px;
+  margin: 0 auto;
+  padding-left: 58px;
+}
+
+.testimonials__quote::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -58px;
+  height: 20px;
+  width: 28px;
+  background: url("../images/icons/quote-ico.svg") 0 0 / 100% no-repeat;}
+
+.testimonials__quote {
+  font-size: 20px;
+  line-height: 150%;
+  margin-bottom: 24px;
+  position: relative;
+}
+
+.testimonials__user {
+  display: flex;
+  align-items: center;
+}
+
+.testimonials__avatar {
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 20px;
+}
+
+.testimonials__info-name {
+  color: #1E212C;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.testimonials__info-position {
+  font-size: 14px;
+  color: #787A80;
+  line-height: 150%;
+}
+
+.testimonials__arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.testimonials__arrow::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 48px;
+  height: 48px;
+  background-color: #FF3F3A;
+  border-radius: 50%;
+  z-index: -1;
+  transition: all .3s;
+}
+
+.testimonials__arrow:hover::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.testimonials__arrow path {
+  transition: all .3s;
+}
+
+.testimonials__prev {
+  left: 0;
+}
+
+.testimonials__next {
+  right: 0;
+}
+
+.testimonials__arrow:hover path {
+  fill: #fff;
+}
+
+.testimonials__dots .slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.testimonials__dots li {
+  margin-right: 12px;
+}
+
+.testimonials__dots li:last-child {
+  margin-right: 0;
+
+}
+
+.testimonials__dots button {
+  font-size: 0;
+  background: transparent;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.testimonials__dots button::before {
+  content: "";
+  height: 3px;
+  width: 100%;
+  background-color: #B3B7BC;
+  border-radius: 3px;
+}
+
+.testimonials__dots .slick-active button::before{
+  background-color: #424551;
+  transition: all .3s;
+}
+
