--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ html, body {
   padding-bottom: 175px;
 }
 
+
+.main__program {
+  padding-top: 115px;
+  padding-bottom: 186px;
+}
+
 .button {
   display: inline-block;
   font-weight: 700;
@@ -80,8 +86,6 @@ html, body {
 
 .heading {
   color: #1E212C;
-
-
 }
 
 .heading__subtitle {
@@ -416,8 +420,8 @@ html, body {
   margin-right: 16px;
 }
 
-/* ------SECTION DIRECTION */
-/* ------SECTION DIRECTION */
+/* ------SECTION DIRECTION  ===============*/
+/* ------SECTION DIRECTION =============== */
 
 .directions {}
 
@@ -807,6 +811,7 @@ html, body {
 
 .testimonials__heading {
   margin-bottom: 60px;
+  
 }
 
 .testimonials__slider-wrapper {
@@ -964,7 +969,8 @@ html, body {
   content: "";
   position: absolute;
   left: -230px;
-  bottom: -120px;;
+  bottom: -120px;
+  ;
   background: url("../images/decor/5.svg") 0 0 / 100% no-repeat;
   width: 90px;
   height: 90px;
@@ -984,7 +990,7 @@ html, body {
   display: block;
 }
 
-.companies__grid-link img{
+.companies__grid-link img {
   width: 100%;
   height: 100%;
   filter: grayscale(1);
@@ -993,8 +999,85 @@ html, body {
 }
 
 
-.companies__grid-link:hover img{
+.companies__grid-link:hover img {
   filter: grayscale(0);
   opacity: 1;
   transition: all .5s;
 }
+
+/* =============== PROGRAM ============ */
+/* =============== PROGRAM ============ */
+/* =============== PROGRAM ============ */
+
+
+
+
+.program {}
+
+.container {}
+
+.program__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.program__content {
+  margin-right: 30px;
+}
+
+.program__heading {
+  margin-bottom: 60px;
+}
+
+.program__accordeon {}
+
+.program__accordeon-item {
+  margin-bottom: 24px;
+}
+
+.program__accordeon-link {
+  display: block;
+  padding-left: 40px;
+}
+
+.program__accordeon-item:last-child {
+  margin-bottom: 0;
+}
+
+.program__accordeon-head {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+}
+
+.program__accordeon-head span {
+  font-weight: 400;
+  color: #FF3F3A;
+  position: relative;
+}
+
+.program__accordeon-head::before,
+.program__accordeon-head::after {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 2px;
+  left: 0px;
+  top: 0%;
+  /* width: 18.33px;
+  height: 1.67px;
+  left: 4.15%;
+  right: 4.15%;
+  top: 45.83%;
+  bottom: 45.83%; */
+  background: rgb(255, 63, 58);
+}
+
+.program__accordeon-head::after {}
+
+.program__accordeon-text {
+  margin-top: 16px;
+}
+
+.program_image {}
