--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ html, body {
   padding-bottom: 186px;
 }
 
+
+.main__blog {
+  padding-bottom: 200px;
+}
+
+
 .button {
   display: inline-block;
   font-weight: 700;
@@ -811,7 +817,7 @@ html, body {
 
 .testimonials__heading {
   margin-bottom: 60px;
-  
+
 }
 
 .testimonials__slider-wrapper {
@@ -1005,16 +1011,9 @@ html, body {
   transition: all .5s;
 }
 
-/* =============== PROGRAM ============ */
-/* =============== PROGRAM ============ */
-/* =============== PROGRAM ============ */
-
-
-
-
-.program {}
-
-.container {}
+/* =============== PROGRAM ================================================ */
+/* =============== PROGRAM ================================================ */
+/* =============== PROGRAM ================================================ */
 
 .program__inner {
   display: flex;
@@ -1030,8 +1029,6 @@ html, body {
   margin-bottom: 60px;
 }
 
-.program__accordeon {}
-
 .program__accordeon-item {
   margin-bottom: 24px;
 }
@@ -1041,7 +1038,7 @@ html, body {
   padding-left: 40px;
 }
 
-.program__accordeon-link--active .program__accordeon-head::after{
+.program__accordeon-link--active .program__accordeon-head::after {
   transform: rotate(0deg);
 
 }
@@ -1085,4 +1082,179 @@ html, body {
   max-width: 500px;
 }
 
-.program_image {}
+
+
+/* =============== BLOG ================================================ */
+/* =============== BLOG ================================================ */
+/* =============== BLOG ================================================ */
+
+
+.blog {}
+
+.blog__inner {}
+
+.blog__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 60px;
+}
+
+.blog__heading {
+  margin-right: 30px;
+}
+
+.blog__btn {}
+
+.blog__row {
+  display: flex;
+  margin: 0 -15px;
+}
+
+.blog__item {
+  padding: 0 15px;
+}
+
+.blog__item-link {
+  display: block;
+  transition: all 1.3s;
+}
+
+.blog__item-inner {}
+
+.blog__image-box {
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+}
+
+.blog__image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-bottom: 16px;
+}
+
+.blog__image-box span {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  background: #fff;
+  border-radius: 4px;
+  padding: 1px 8px;
+  margin-right: 4px;
+}
+
+.blog__image-box span::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+}
+
+.blog__item-content {}
+
+.blog__item-info {
+  display: flex;
+  margin: 0 -12px 8px;
+}
+
+.blog__info-el {
+  padding: 0 12px;
+  position: relative;
+}
+
+.blog__info-el::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  height: 12px;
+  width: 1px;
+  background-color: #787A80;
+}
+
+.blog__info-el:last-child:after {
+  content: none;
+}
+
+.blog__info-date {
+  display: flex;
+  align-items: center;
+}
+
+.blog__info-date::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  background: url("../images/icons/calendar-icon.svg") 0 0 / 100% no-repeat;
+  margin-right: 9px;
+}
+
+.blog__info-time {
+  display: flex;
+  align-items: center;
+}
+
+.blog__info-time::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 17px;
+  background: url("../images/icons/clock-icon.svg") 0 0 / 100% no-repeat;
+  margin-right: 9px;
+}
+
+.blog__item-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+  margin-bottom: 8px;
+}
+
+.blog__item-text {
+  margin-bottom: 16px;
+}
+
+.blog__item-button {
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  color: #1E212C;
+  transition: all .3s;
+}
+
+.blog__item-button::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background: url("../images/icons/arrow-right-red.svg") 0 0 / 100% no-repeat;
+  margin-left: 8px;
+}
+
+.blog__item-link:hover {
+  box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+  transition: all .3s;
+}
+
+.blog__item-link:hover .blog__item-button {
+  color: #FF3F3A;
+}
+
+.blog__item--podcast .blog__image-box span::before {
+  background: url("../images/icons/podcast-icon.svg") 0 0 / 100% no-repeat;
+}
+
+.blog__item--video .blog__image-box span::before {
+  background: url("../images/icons/play-mini.svg") 0 0 / 100% no-repeat;
+}
+
+.blog__item--article .blog__image-box span::before {
+  background: url("../images/icons/article-icon.svg") 0 0 / 100% no-repeat;
+}
