--- a/css/style.css
+++ b/css/style.css
@@ -1646,6 +1646,22 @@ html, body {
 /* ============= MEDIA ================================= */
 /* ============= MEDIA ================================= */
 
+/* ========================== 1200 =========================== */
+
+@media (max-width: 1200px) {
+  .header__title {
+    font-size: 52px;
+    min-width: 376px;
+  }
+  .header__image {
+    max-width: 540px;
+  }
+}
+
+
+
+/* ========================== 1100 =========================== */
+
 @media (max-width: 1100px) {
   .burger {
     position: fixed;
@@ -1757,11 +1773,48 @@ html, body {
   .header__user-nav {
     margin-bottom: 30px;
   }
+  /* ================================================================ */
+
 }
 
-@media (max-width: 400px) {
+/* ========================== 900 =========================== */
+
+@media (max-width: 900px) {
+  .header__content {
+    margin: 0;
+  }
+  .header__image {
+    display: none;
+  }
+  .header__row {
+    display: none;
+  }
+}
+/* ========================== 450 =========================== */
+
+
+@media (max-width: 450px) {
   .header__top {
     min-width: none;
     left: 0;
+  }
+
+  /* -------------------------------------------------- */
+
+  .header__title {
+    /* max-width: 376px; */
+    max-width: 200px;
+    /* max-width: none; */
+    font-size: 35px;
+  }
+
+  .header__content-buttons {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .header__content-btn {
+    margin: 0 0 30px 0;  
+    text-align: center;
+    width: auto;
   }
 }
