--- a/css/style.css
+++ b/css/style.css
@@ -1096,6 +1096,15 @@ html, body {
   max-width: 500px;
 }
 
+.program__image {
+  flex-shrink: 0;
+}
+
+.program__image img {
+  width: 100%;
+  height: 100%;
+}
+
 /* =============== BLOG ================================================ */
 /* =============== BLOG ================================================ */
 /* =============== BLOG ================================================ */
@@ -1811,12 +1820,27 @@ html, body {
   .cert__heading {
     text-align: center;
   }
-}
-/* ----------------------------------------- */
+  /* ----------------------------------------- */
   .companies__grid {
     gap: 40px 5%;
   }
+  /* ----------------------------------- */
+  .program__image {
+    max-width: 400px;
+    
+  }
 
+}
+
+/* ========================== 1000 =========================== */
+@media (max-width: 1000px) {
+  .program__content {
+    margin-right: 0px;
+  }
+  .program__image {
+    display: none;
+  }
+}
 
 /* ========================== 900 =========================== */
 
@@ -1900,6 +1924,11 @@ html, body {
 
   .testimonials__arrow {
     display: none;
+  }
+  /* ------------------------------------------ */
+  .program__accordeon-head {
+    font-size: inherit;
+    line-height: inherit;
   }
 }
 
